create pgp page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,20 +12,21 @@ import TwitterIcon from "../components/ui/icons/twitter.astro";
         <li><HeaderLink href="/">Home</HeaderLink></li>
         <li><HeaderLink href="/blog">Blog</HeaderLink></li>
         <li><HeaderLink href="/projects">Projects</HeaderLink></li>
+         <li><HeaderLink href="/pgp">PGP</HeaderLink></li>
       </ul>
     </section>
   </nav>
   <div class="social-handles">
     <a
       class="centered"
-      href="https://github.com/flexdinesh/blogster"
+      href="https://github.com/arejula27"
       aria-label="Blogster on GitHub"
     >
       <GitHubIcon title="GitHub" />
     </a>
     <a
       class="centered"
-      href="https://twitter.com/flexdinesh"
+      href="https://twitter.com/arejula27"
       aria-label="Dinesh on Twitter"
     >
       <TwitterIcon title="Twitter" />
