--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,8 +11,10 @@ import TwitterIcon from "../components/ui/icons/twitter.astro";
       <ul>
         <li><HeaderLink href="/">Home</HeaderLink></li>
         <li><HeaderLink href="/blog">Blog</HeaderLink></li>
+        <!-- Keep this page hidden for now
         <li><HeaderLink href="/projects">Projects</HeaderLink></li>
-         <li><HeaderLink href="/pgp">PGP</HeaderLink></li>
+        -->
+        <li><HeaderLink href="/pgp">PGP</HeaderLink></li>
       </ul>
     </section>
   </nav>
