--- a/src/pages/pgp.astro
+++ b/src/pages/pgp.astro
@@ -7,7 +7,7 @@ import { SITE_TITLE } from "../config";
 ---
 
 <PageLayout>
-  <PageMeta title={`${SITE_TITLE} | Web Ninja`} slot="meta" />
+  <PageMeta title={`${SITE_TITLE}`} slot="meta" />
   <Fragment slot="main">
     -----BEGIN PGP PUBLIC KEY BLOCK-----
     mDMEZeRcDRYJKwYBBAHaRw8BAQdAVIZeG7dS9+am78boFomUMqdYn4HC9oL7xVqe
