--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -11,35 +11,7 @@ import Heading from "./ui/Heading.astro";
     {`${SITE_TITLE}`}
   </Heading>
   <p class="subtext">Software engineer.</p>
-  <p class="hello">
-    Hello! This is a starter template to build your own blog with
-    <a
-      class="animated"
-      href={"https://github.com/flexdinesh/blogster"}
-      target="_blank">Blogster</a
-    >. Available in four themes
-    <a
-      class="animated"
-      href={"https://blogster-minimal.netlify.app"}
-      target="_blank">minimal</a
-    >,
-    <a
-      class="animated"
-      href={"https://blogster-sleek.netlify.app"}
-      target="_blank">sleek</a
-    >,
-    <a
-      class="animated"
-      href={"https://blogster-newspaper.netlify.app"}
-      target="_blank">newspaper</a
-    > and
-    <a
-      class="animated"
-      href={"https://blogster-bubblegum.netlify.app"}
-      target="_blank">bubblegum</a
-    >. This blog is a demo for <strong>minimal</strong> theme. Get started with one
-    simple command.
-  </p>
+  <p class="hello">Hello!</p>
   <p class="cli-command">
     <code>npx create-blogster@latest --theme minimal</code>
   </p>
