--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,6 @@ import { SITE_TITLE } from "../config";
 <PageLayout>
   <PageMeta title={`${SITE_TITLE}`} slot="meta" />
   <Fragment slot="main">
-    <p>Hello</p>
+    <Intro />
   </Fragment>
 </PageLayout>
