--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,10 +3,14 @@
 
 <footer>
   <div>
-    This blog is built with 
-    <a class="animated" href={"https://github.com/flexdinesh/blogster"} target="_blank"> Blogster</a> 
-    and hosted in
-    <a class="animated" href={"https://www.netlify.com"}> Netlify</a>.
+    This blog is built with
+    <a
+      class="animated"
+      href={"https://github.com/flexdinesh/blogster"}
+      target="_blank"
+    >
+      Blogster</a
+    >
   </div>
 </footer>
 
