Update gradient and outline colors in Intro component

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -26,13 +26,13 @@ import Heading from "./ui/Heading.astro";
   }
 
   .gradient-color {
-    --gradient-text-from: #5433ff;
-    --gradient-text-via: #20bdff;
-    --gradient-text-to: #a5fecb;
+    --gradient-text-from: #f1b323;
+    --gradient-text-via: #f18f0e;
+    --gradient-text-to: #ff6a00;
   }
 
   .outline-color {
-    --outline-color: var(--text-heading);
+    --outline-color: transparent;
   }
 
   @media (prefers-color-scheme: dark) {
