Add metadata for RSS clients

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -21,6 +21,7 @@ import Favicon from "./Favicon.astro";
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="generator" content="Blogster" />
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="https://arejula27.github.io/rss.xml" />
     <Favicon />
     <slot name="meta" />
   </head>
